# gradido-blockchain-core

./: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md
benchmarks/: CMakeLists.txt
benchmarks/src/: bench_numberToString.c
include/gradido_blockchain/data/: balance_derivation_type.h  cross_group_type.h  duration_seconds.h  timestamp.h  timestamp_seconds.h  unit.h
include/gradido_blockchain/data/compact/: account_balance.h  confirmed_tx.h  public_key_index.h  tx_id.h
include/gradido_blockchain/lib/: unit.h
include/gradido_blockchain_core/data/: address_type.h  timestamp.h  transaction_type.h  types.h  unit.h
include/gradido_blockchain_core/data/compact/: account_balance.h  confirmed_tx.h  tx_timestamps.h
include/gradido_blockchain_core/utils/: converter.h  duration.h  mono_timer.h
src/data/: timestamp.c  timestamp_seconds.c  unit.c
src/lib/: unit.c
src/utils/: converter.c  duration.c  mono_timer.c
tests/unit/: CMakeLists.txt  terminal_colors.h
tests/unit/src/: test_converter.cpp  test_duration.cpp  test_unit.cpp
